--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,14 @@
 __pycache__/
 *.py[codz]
 *$py.class
+README_HELPS/
+runs/
+OldTest/
+output/
+videos/
+config/
+data/
+.idea/
 
 # C extensions
 *.so
@@ -205,3 +213,4 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
